@@ -14,6 +14,7 @@ Version 0.x - Date TBD
   
   Bug fixes:
     * Fixed wrong sidebar alignment in tests/sample.html. [OFB]
+    * Fixed wrong line-height on sub/sup. [OFB]
     * 
 
   Misc:
